# grub-reboot-picker

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  com.mendhak.grubrebootpicker.desktop  com.mendhak.grubrebootpicker.policy  docker-bake.hcl  flake8.config  org.freedesktop.policykit.tray.policy  pyproject.toml  regextest.py  setup.cfg  setup.py  stdeb.cfg  test.py  tray-reboot.py  tray.py  trayicon.py  trayicon2.py  version.sh
.github/workflows/: main.yml  release.yml
debian/: .gitignore  changelog  control  install  links  rules
debian_build/: generate_changelog.py  pyproject.toml  setup.py
debian_build/debian/: .gitignore  changelog  control  copyright  install
grub-reboot-picker/: grub-reboot-picker.py
other/: generate_changelog.py  regextest.py
src/: grub-reboot-picker.py
