[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grub-reboot-picker"
version = "0.0.1"
authors = [
    { name="Mendhak", email="mendhak@users.noreply.github.com" },
]
description = "Tray application, reboot into different OSes"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/mendhak/grub-reboot-picker"